--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-cayman
-title: Prueba
-description:
+remote_theme: just-the-docs/just-the-docs
+title: ASOHF Documentation
+description: Adaptive Spherical Overdensity Halo Finder (Planelles & Quilis 2010, Vallés-Pérez, Planelles & Quilis 2022 in prep.)
