--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
 remote_theme: just-the-docs/just-the-docs
 title: ASOHF Documentation
 description: Adaptive Spherical Overdensity Halo Finder (Planelles & Quilis 2010, Vallés-Pérez, Planelles & Quilis 2022 in prep.)
+aux_links:
+  "ASOHF on GitHub":
+    - "//github.com/dvallesp/ASOHF"
